another fix for flickering on touch devices

--- a/src/Stylesheets/index.css
+++ b/src/Stylesheets/index.css
@@ -8,6 +8,6 @@ body {
   color: white;
 }
 
-div, body {
+div, body, html {
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
